259/ Augmentation now uses universal localization.
260/ Slightly buff Unforgiving which supposely make it feel better to play.
261/ Fixed Lootbox Lord shoot out disappearing boomstick.
262/ Buff LucidNightmares by adding additional buff effect and the summon projectile stronger.
263/ Weaken skill will make the projectile fly a lot faster.
264/ Added some fixes toward player ability to bypass Lootbox Lord Death field.
265/ Added sprite and finish up coin flip skill.
266/ Work on some localization.
267/ Fixed swing visual problem still showing after player has died.
268/ Added Anti-immunity debuff.
269/ Update visual for Lootbox lord.
270/ Added sprite for Annihiliation buff.
271/ Further improved Lootbox Lord fight visual, indicator and the fight itself.
272/ Deleted bunch of accessory rework and reimplement mechanical lens rework.
273/ Added better explanation of what the scroll effect do.
274/ Change the build version from 0.0.14 to 0.0.15
275/ Significantly buff Heart pistol.
276/ Significantly buff wood armor set.
277/ Fixed axe rework not interactable with tree.
278/ Slightly make shortsword a little bit smarter.
279/ Reduce radius of Eternal wealth from 500 -> 300.
280/ Add in spawn condition for portal to subworld.
281/ Nerf EoC boss fight to be much more fair.
282/ Slightly changed Manafury.
283/ Added Master wood bow.
284/ Added Snowstorm.
285/ Organized lootbox folder for near future implementation.
286/ Added Gold/Platinum Complex Bow.
287/ Implemented test guard mechanic for sword.
288/ Follow up with 287 changes, add in a small parry mechanic.
289/ Organized code.
290/ Reworked Wood sword to be much better.
291/ Deleted 2 Token of Pride upgrade perk.
292/ Deleted Agumentation chance, enchantment chance and transmutation chance from PlayerStatsHandler.
293/ Nerf Alchemist's Book, capped the "Having active buff will increase your stats" effect to 3 buffs.
294/ Added Soul Breaker perk.
295/ Changed how DR work on NPC side.
296/ Organized Mod perk.