@@ -6,7 +6,7 @@ using Roguelike.Common.Utils;
 
 using Roguelike.Common.Global;
 
-namespace Roguelike.Contents.Items.Lootbox {
+namespace Roguelike.Contents.Items.Lootbox.BossLootBox {
 	class CrimsonLootBox : LootBoxBase {
 		public override void SetDefaults() {
 			Item.width = 54;
